--- a/style.css
+++ b/style.css
@@ -34,10 +34,19 @@ body{
     transition: .2s;
 }
 
-/* aplica o efeito ao botão */
 button:hover{
     box-shadow: 0px 0px 8px #8257E6;
     transform: scale(1.05);
+}
+
+h2.titulo{
+    color: #fff;
+    font-size: 38px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+h2.titulo span{
+    color: #8257E6;
 }
 
 /* Estilo do cabeçalho */
@@ -162,3 +171,78 @@ section.sobre .flex{
     margin: 20px 0;
     text-align: justify;
 }
+
+/* Estilo das habilidades */
+section.habilidades{
+    padding: 80px 4%;
+}
+
+.habilidades .habilidades-box{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 5rem;
+}
+
+.habilidades .habilidades-box .box{
+    position: relative;
+    text-align: center;
+    background-color: #212121;
+    width: 8rem; /*largura*/
+    aspect-ratio: 1;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-top-left-radius: 2.5rem;
+    border-top-right-radius: 2.5rem;
+    cursor: pointer;
+    transition: .2s;
+}
+
+.habilidades .habilidades-box .box p{
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 15px;
+    font-weight: 250;
+    color: #8257e6;
+    margin-bottom: 1.5rem
+}
+
+.habilidades .habilidades-box .box img{
+    width: 3rem
+}
+
+.habilidades .habilidades-box .box::after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%; 
+    height: 0.3rem;
+    background-image: linear-gradient(90deg, #8257E6 0%, #5a0a7c 92.32%);
+    bottom: -0.1rem;
+    left: 0
+}
+
+.habilidades .habilidades-box .box:hover{
+    transform: scale(1.05);
+    box-shadow: 0px 0px 8px #8257E6;
+}
+
+/* Estilo dos projetos */
+section.projetos{
+    padding: 80px 4%;
+    box-shadow: 0 0 40px 10px #1a1a1a;
+}
+
+section.projetos .flex{
+    justify-content: space-around;
+}
+
+.img-projetos{
+    width: 360px;
+    height: 460px;
+    background-color: #8257e6;
+}
+
