--- a/style.css
+++ b/style.css
@@ -27,14 +27,14 @@ body{
     font-size: 18px;
     font-weight: 600;
     color: #fff;
-    background-color: #8257e6;
+    background-color: #8257E6;
     border: 0;
     border-radius: 30px;
     cursor: pointer;
     transition: .2s;
 }
 
-button:hover{
+button:hover, form .btn-enviar input:hover{
     box-shadow: 0px 0px 8px #8257E6;
     transform: scale(1.05);
 }
@@ -83,16 +83,16 @@ header nav ul li{
 }
 
 /* Botão de redes sociais */
-.topo-site .txt-topo-site .btn-social button{
-    width: 60px;
-    height: 60px;
+.btn-social button{
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     border: none;
     color: #fff;
-    background-color: #8257e6;
-    font-size: 25px;
+    background-color: #8257E6;
+    font-size: 20px;
     cursor: pointer;
-    margin: 15px 5px; /* altura e distancia*/
+    margin: 10px 5px; /* altura e distancia*/
     transition: .2s;
 }
 
@@ -114,7 +114,7 @@ section.topo-site .flex{
 }
 
 .topo-site .txt-topo-site h1 span{
-    color: #8257e6;
+    color: #8257E6;
 }
 
 .topo-site .txt-topo-site p{
@@ -243,6 +243,108 @@ section.projetos .flex{
 .img-projetos{
     width: 360px;
     height: 460px;
-    background-color: #8257e6;
+    background-color: #8257E6;
 }
 
+/* Estilo do Fomulario */
+section.fomulario{
+    padding: 80px 4%;
+}
+
+form{
+    max-width: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 40px;
+}
+
+form input, form textarea{
+    width: 100%;
+    background-color: #2e2e2e;
+    border: 0;
+    outline: 0;
+    padding: 20px 15px;
+    border-radius: 15px;
+    color: #fff;
+    font-size: 18px;
+}
+
+form textarea {
+    resize: none; /* para não redimensionar */
+    max-height: 200px;
+}
+ 
+form .btn-enviar{
+    margin-top: 20px;
+    text-align: center;
+}
+
+form .btn-enviar input{
+    width: 120px;
+    background-color: #8257E6;
+    color: #fff;
+    font-weight: 700;
+    cursor: pointer;
+    transition: .2s;
+    border-radius: 20px;
+}
+
+/* Estilo rodapé */
+footer{
+    padding: 30px 4%;
+    box-shadow: 0 0 40px 10px #1a1a1a;
+}
+
+footer .flex{
+    justify-content: center;
+}
+
+footer .line-footer{
+    padding: 20px 0;
+}
+
+footer p{
+    color: #f7f7f7;
+    text-align: center;
+}
+
+
+/* Estilo scrollbar */
+::-webkit-scrollbar{ /*trilho*/
+    width: 10px;
+    background-color: #1a1a1a;
+}
+
+::-webkit-scrollbar-thumb{ /*cor da barra de rolagem*/
+    width: 10px;
+    background-color: #8257E6;
+}
+
+/* Responsividade */
+@media screen and (max-width: 1020px){
+    /*classes gerias*/
+    .flex{
+        flex-direction: column-reverse;
+    }
+
+    /*cabeçalho*/
+    .menu-desktop, .btn-contato{
+        display: none;
+    }
+    
+    /*topo site*/
+    section.topo-site{
+        padding: 20px 8%;
+    }
+
+    .topo-site h1{
+        font-size: 30px;
+    }
+
+    .topo-site .img-topo-site img{
+        width: 100%;
+    }
+}
