--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header a{
 }
 
 /* quando passar o mouse emcima dar um pequeno zoo e mudar a cor */
-header a:hover{
+header nav.menu-desktop a:hover{
     color: #8257E6;
     transform: scale(1.05);
 }
@@ -85,7 +85,7 @@ header nav ul{
 }
 
 /* adiciona um ao lado do outro e arruma o espaçamento */
-header nav ul li{
+header nav.menu-desktop ul li{
     display: inline-block;
     padding: 0 40px;
 }
@@ -112,6 +112,75 @@ header.rolagem a{
     cursor: pointer;
     margin: 10px 5px; /* altura e distancia*/
     transition: .2s;
+}
+
+/* Estilo MENU MOBILE */
+
+.btn-abrir-menu{
+    display: none;
+}
+
+.btn-abrir-menu i{
+    color: #8257E6;
+    font-size: 40px;
+}
+
+.menu-mobile{
+    background-color: #000000;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 99999;
+    width: 0%;
+    overflow: hidden;
+    transition: .2s;
+}
+
+/* adiciona a classe js para abrir */ 
+.menu-mobile.abrir-menu{
+    width: 70%;
+}
+
+.menu-mobile.abrir-menu ~ .overlay-menu{
+    display: block;
+}
+
+.menu-mobile .btn-fechar{
+    padding: 20px 5%;
+}
+
+.menu-mobile .btn-fechar i{
+    color: #8257E6;
+    font-size: 30px;
+}
+
+.menu-mobile nav ul{
+    text-align: right;
+}
+
+.menu-mobile nav ul li a{
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+    padding: 20px 7%;
+    display: block; 
+}
+
+.menu-mobile nav ul li a:hover{
+    background-color: #8257E6;
+    color: #000;
+}
+
+.overlay-menu{
+    background-color: #000000b4;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 88888;
+    display: none;
 }
 
 /* Estilo do TOPO DO SITE */
@@ -351,11 +420,17 @@ footer p{
         flex-direction: column-reverse; /*determina a direção dos elementos*/
     }
 
+    .btn-abrir-menu{
+        display: block;
+    }
+
     /*menu*/
-    .menu-desktop, .btn-contato{
+    .menu-desktop, 
+    .btn-contato{
         display: none;
     }
-    
+
+   
     /*topo site*/
     section.topo-site .flex{
         gap: 40px;
@@ -367,6 +442,11 @@ footer p{
 
     .topo-site h1{
         font-size: 28px;
+        text-align: center;
+    }
+
+    .topo-site p{
+        text-align: center;
     }
 
     .topo-site .img-topo-site img{
